# slp2mp4

./: .gitignore  LICENSE  README.md  VERSIONS.md  build_windows.py  config.py  defaults.toml  ffmpeg.py  main.py  pyproject.toml  slp2mp4-gui.spec  slp2mp4_gui.py  util.py  video.py
.github/workflows/: build.yml
dolphin/: comm.py  ini.py  runner.py
modes/: __init__.py  directory.py  single.py
src/slp2mp4/: clipper.py  config.py  defaults.toml  ffmpeg.py  gui.py  main.py  orchestrator.py  output.py  replay.py  util.py  video.py
src/slp2mp4/dolphin/: comm.py  ini.py  runner.py
src/slp2mp4/modes/: __init__.py  directory.py  mode.py  replay_manager.py  single.py  zip.py
