[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "slp2mp4"
description = "Convert slippi replays to videos"
readme = "README.md"
requires-python = ">=3.11"
keywords = [
    "slippi",
    "slp",
    "ssbm",
    "mp4",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "pathvalidate",
    "py-slippi>=1.6.0",  # Added for clipping feature
]
version = "3.0.5"  # Static version instead of dynamic

# TODO: Checks for tkinter / tcl
[project.optional-dependencies]
gui = [
    "tomli-w",
]

[tool.hatch.build.targets.sdist]
include = [
  "src/slp2mp4/*.py",
  "src/slp2mp4/*.toml",
]

[project.urls]
Homepage = "https://github.com/davisdude/slp2mp4"
Issues = "https://github.com/davisdude/slp2mp4/issues"

[project.scripts]
slp2mp4 = "slp2mp4.bin.main:main"

[project.gui-scripts]
slp2mp4_gui = "slp2mp4.bin.gui:main"